istio-workshop-part2/security/mtls/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
spec:
  host: recommendation
  subsets:
     - name: version-v1
       labels:
         version: v1
     - name: version-v2
       labels:
         version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
