istio-workshop-part2/security/mtls/destinationrule_all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer
spec:
  host: customer
  subsets:
     - name: version-v1
       labels:
         version: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: preference
spec:
  host: preference
  subsets:
     - name: version-v1
       labels:
         version: v1
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
