istio-workshop-part2/security/mtls/virtualservice_all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - customer
  http:
  - route:
     - destination:
         host: customer
         subset: version-v1
         weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: preference
spec:
  hosts:
  - preference
  http:
  - route:
     - destination:
         host: preference
         subset: version-v1
         weight: 100
